--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   main:
     docker:
-      - image: cimg/node:lts-browsers
+      - image: cimg/node:18.14.2-browsers
     steps:
       - checkout
 
