--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,18 @@ orbs:
 jobs:
   main:
     docker:
-      - image: cimg/node:18.14.2-browsers
+      - image: cimg/node:lts-browsers
     steps:
       - checkout
 
       - run:
           name: Install PNPM
-          command: npm install --prefix=$HOME/.local -g pnpm@9
+          command: npm install --prefix=$HOME/.local -g pnpm@8
 
       # This enables task distribution via Nx Cloud
       # Run this command as early as possible, before dependencies are installed
       # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      - run: pnpm dlx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
+      #- run: pnpm dlx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
 
       - run: pnpm install --frozen-lockfile
       - nx/set-shas:
