--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - restore_cache:
           name: Restore pnpm Package Cache
           keys:
-            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+            - pnpm-packages2-{{ checksum "pnpm-lock.yaml" }}
             
       - run:
           name: Install PNPM
@@ -30,7 +30,7 @@ jobs:
 
       - save_cache:
           name: Save pnpm Package Cache
-          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+          key: pnpm-packages2-{{ checksum "pnpm-lock.yaml" }}
           paths:
             - /home/circleci/.local/share/pnpm/store
 
