try deploy to s3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,19 @@ version: 2.1
 
 orbs:
   nx: nrwl/nx@1.6.2
+  aws-s3: circleci/aws-s3@3.1.1 # use the AWS S3 orb in your configuration
 
 jobs:
+  deploy:
+    docker: # Use the Docker executor for the build job
+      - image: cimg/base:current
+    steps:
+      - checkout
+      - run: mkdir bucket && echo "lorem ipsum $(date)" > bucket/build_asset.txt
+      - aws-s3/sync:
+        from: bucket
+        to: 's3://circleci-nx-test/pf'
+          
   main:
     docker:
       - image: cimg/node:lts-browsers
@@ -45,4 +56,5 @@ workflows:
 
   ci:
     jobs:
-      - main
+      - deploy
+    #  - main
