--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:          
   main:
     docker:
-      - image: cimg/base:current
+      - image: cimg/node:18.14.2
     steps:
       - checkout
 
