deploy actual code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,15 +41,21 @@ jobs:
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       - run: pnpm exec nx affected --base=$NX_BASE --head=$NX_HEAD -t lint test build 
 
+      - persist_to_workspace:
+          root: .
+          paths:
+            - dist/nx
+
   deploy:
     docker: # Use the Docker executor for the build job
       - image: cimg/base:current
     steps:
       - checkout
-      - run: mkdir bucket && echo "lorem ipsum $(date)" > bucket/build_asset.txt
+      - attach_workspace:
+          at: /home/circleci/project
       - aws-s3/sync:
-          from: bucket
-          to: 's3://circleci-nx-test/pf'
+          from: dist/nx
+          to: 's3://circleci-nx-test/'
 
 workflows:
   version: 2
