--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
+      - run: pwd && cd ~ && pwd
       - attach_workspace:
           at: $CIRCLE_WORKING_DIRECTORY
       - run: ls $CIRCLE_WORKING_DIRECTORY
