--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
     docker:
       - image: cimg/base:current
     steps:
-      - run: echo "hello world" > aaa.txt
+      - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
       - persist_to_workspace:
           root: .
 
